on Galaxy SII and S, to alleviate flickering issues while moving tiles (credits to infect2)

--- a/style/main.scss
+++ b/style/main.scss
@@ -294,6 +294,7 @@ hr {
       width: ceil($tile-size);
       height: ceil($tile-size);
       line-height: $tile-size + 10px;
+      @include transform(translateZ(0));
     }
 
     // Build position classes
